<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="create_activity">Create Treasure Hunt</string>
    <string name="clue">Clue</string>
    <string name="account">My Account</string>

    <string name="title">Title</string>
    <string name="openDate">Select Open Date</string>
    <string name="closingDate">Select Close Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="addClues">Add Clues</string>
    <string name="addClue">Add Clue</string>
    <string name="createTH">Create Treasure Hunt</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="createdByMe">T.H. Created by me</string>
    <string name="participatedIn">T.H. Participated In</string>

    <string name="login_preference">com.example.marilia.treasurehunt_login_preference</string>
    <string name="login_status_preference">com.example.marilia.treasurehunt_login_status_preference</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_clue_maps">Map</string>

    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="title_activity_game">Map</string>
    <string name="title_activity_started">StartedActivity</string>
    <string name="here">I am Here!</string>
    <string name="skip">Skip(-10)</string>
    <string name="startedTH">Started Treasure Hunts</string>
    <string name="play">Play Treasure Hunt</string>

</resources>
