<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ListClues"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addClue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_recycler_view"
        android:layout_alignParentRight="true"
        android:text="@string/addClue" />
    <Button
        android:id="@+id/createTH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addClue"
        android:layout_alignParentRight="true"
        android:text="@string/createTH" />
    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addClue"
        android:layout_alignParentLeft="true"
        android:text="@string/cancel" />




</RelativeLayout>