<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_marginTop="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountMessage"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createdByMe"
        android:layout_gravity="center"
        android:text="@string/createdByMe"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/paricipatedIn"
        android:layout_gravity="center"
        android:text="@string/participatedIn"/>
    <Button
        android:id="@+id/logoutBn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:text="@string/logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Icons made by Freepik from www.flaticon.com" />



</LinearLayout>

